# simple-aws

./: .cz.toml  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
simple_aws/: auth.py  config.py  credentials.py  exc.py  http.py  model.py  typedef.py  utils.py
simple_aws/services/: __init__.py  factory.py
simple_aws/services/s3/: __init__.py  config.py  models.py
simple_aws/services/s3/object/: __init__.py  copy.py  core.py  delete.py  get.py  list_.py  service.py  upload.py
simple_aws/services/s3/service/: __init__.py  core.py  delete.py  get.py  handle_object.py  list_.py  list_objects.py  service.py  upload.py
tests/: conftest.py  test_auth.py
